--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "react": "^19.1.1",
+    "react-d3-tree": "^3.6.6",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
