--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,13 @@ services:
     container_name: rails_organizational-chart
     restart: on-failure
     env_file: .env
-    command: ["bash", "-c", "bin/rails db:create && bin/rails db:migrate && bin/rails s -p 3000 -b '0.0.0.0'"]
+    command: [
+      "bash", "-c", 
+      "bin/rails db:create && \
+      bin/rails db:migrate && \
+      bin/rails db:seed && \
+      bin/rails s -p 3000 -b '0.0.0.0'"
+    ]
     volumes:
       - .:/app
     ports:
